# GarFishEngine

./: .clang-format  .gitignore  .gitmodules  .markdownlint.yaml  CMakeLists.txt  DOCUMENTATION.MD  Doxyfile  GarFishEngine.vcxproj  README.md  RESOURCES.md  TODOS.md
docs/: DOCUMENTATION.MD  JuneReport.md  RESOURCES.md  TODOS.md  december_report.md  doxy_main.md  engine_architecture.md  february_todos.md  graphics_pipeline.md  june_report.md  text_considerations.md
inc/: engine.hpp  engine_managers.hpp  engine_types.hpp  gf_err.hpp  gf_options.hpp  gf_resource_manager.hpp  gf_text.hpp  gf_types.hpp  gf_util.hpp  gf_vulkan.hpp  gf_window.hpp  gl_joystick.hpp  gl_keys.hpp  gl_manager.hpp  gl_mouse.hpp  gl_types.hpp  gl_window.hpp  vk_core.hpp  vk_descriptors.hpp  vk_frames.hpp  vk_images.hpp  vk_initializers.hpp  vk_loader.hpp  vk_materials.hpp  vk_pipelines.hpp  vk_renderable.hpp  vk_types.hpp
shaders/: colored_tri_mesh.vert  gradient.comp  gradient_color.comp  mesh.frag  mesh.vert  tex_image.frag
src/: CMakeLists.txt  engine_main.cpp  engine_managers.cpp  gf_err.cpp  gf_options.cpp  gf_resource_manager.cpp  gf_text.cpp  gf_types.cpp  gf_vulkan.cpp  gf_window.cpp  gl_keys.cpp  gl_manager.cpp  gl_mouse.cpp  gl_window.cpp  main.cpp  vk_core.cpp  vk_descriptors.cpp  vk_frames.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_materials.cpp  vk_pipelines.cpp  vk_renderable.cpp  vk_types.cpp
src/common/: com_delagg.hpp  com_delstack.hpp  com_grid.hpp  com_refcount.hpp  com_util.hpp  logger.cpp  logger.hpp  t_grid.hpp
src/garfish/: camera.cpp  camera.hpp  componentstore.hpp  engine.cpp  engine.hpp  err.cpp  framepipeline.hpp  gf_engine.cpp  gf_engine.hpp  gf_err.hpp  gf_resource_manager.cpp  gf_resource_manager.hpp  gf_stats.hpp  gf_text.cpp  gf_text.hpp  gf_vulkan.cpp  gf_vulkan.hpp  icomponent.hpp  isystem.hpp  main.cpp  options.cpp  options.hpp  resource_manager.cpp  resource_manager.hpp  text.cpp  text.hpp  vulkan.cpp  vulkan.hpp  world.hpp
src/garfish_user/: gfu_types.cpp  gfu_types.hpp  types.hpp
src/vulkan_high/: font_data.cpp  font_data.hpp  font_image.cpp  font_image.hpp  font_manager.cpp  font_manager.hpp  gltf.cpp  gltf.hpp  imageatlas.cpp  imageatlas.hpp  imaterial.hpp  irenderable.hpp  mat_img.cpp  mat_img.hpp  mat_metrough.cpp  mat_metrough.hpp  material_manager.cpp  material_manager.hpp  meshnode.hpp  node.cpp  node.hpp  render_primatives.cpp  render_primatives.hpp  render_types.hpp  t_imageatlas.cpp  t_imageatlas.hpp  t_meshnode.cpp  t_meshnode.hpp  t_node.cpp  t_node.hpp  textlow_types.hpp  vk_materials.hpp  vkh_font_data.cpp  vkh_font_data.hpp  vkh_font_image.cpp  vkh_font_image.hpp  vkh_font_manager.cpp  vkh_font_manager.hpp  vkh_gltf.cpp  vkh_gltf.hpp  (+18 more)
src/vulkan_low/: alloc.hpp  alloc_buf.cpp  alloc_buf.hpp  alloc_img.cpp  alloc_img.hpp  core.cpp  core.hpp  desc_alloc.cpp  desc_alloc.hpp  desc_allocgrow.cpp  desc_allocgrow.hpp  desc_layoutbuilder.cpp  desc_writer.cpp  framedata.cpp  framedata.hpp  images.cpp  images.hpp  imgbuf_alloc.cpp  imgbuf_alloc.hpp  imm_frame.cpp  imm_frame.hpp  initializers.cpp  pipelines.cpp  shader_types.hpp  swapchain.cpp  swapchain.hpp  t_alloc_buf.cpp  t_alloc_buf.hpp  t_alloc_img.cpp  t_alloc_img.hpp  t_desc_alloc.cpp  t_desc_allocgrow.cpp  t_desc_layoutbuilder.cpp  t_desc_layoutbuilder.hpp  t_desc_writer.cpp  t_desc_writer.hpp  types.hpp  vk_core.cpp  vk_core.hpp  vk_initializers.cpp  (+25 more)
src/vulkan_text/: font_data.cpp  font_data.hpp  font_image.cpp  font_manager.cpp  font_manager.hpp  node_text.cpp  node_text.hpp  text_generate.cpp  text_generate.hpp  types_text.hpp
src/window_input/: gl_manager.hpp  gl_mouse.hpp  wi_joystick.hpp  wi_keys.cpp  wi_keys.hpp  wi_manager.cpp  wi_manager.hpp  wi_mouse.cpp  wi_mouse.hpp  wi_types.hpp  wi_window.cpp  wi_window.hpp
